--- a/Inspection/Base.lproj/Main.storyboard
+++ b/Inspection/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="KA8-4y-cXg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Q7R-9S-cWW">
     <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -93,9 +93,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u8U-NK-x4G">
-                                <rect key="frame" x="0.0" y="115" width="768" height="909"/>
-                            </scrollView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wOU-yi-PuS" customClass="ButtonBarView" customModule="XLPagerTabStrip">
                                 <rect key="frame" x="0.0" y="50" width="768" height="65"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -110,22 +107,23 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j5K-kA-y4z">
+                                <rect key="frame" x="259" y="280" width="97" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="u8U-NK-x4G" firstAttribute="top" secondItem="wOU-yi-PuS" secondAttribute="bottom" id="IV1-gA-ZbC"/>
-                            <constraint firstItem="Sss-b4-6RN" firstAttribute="top" secondItem="u8U-NK-x4G" secondAttribute="bottom" id="Vno-x7-Nj8"/>
-                            <constraint firstAttribute="trailing" secondItem="u8U-NK-x4G" secondAttribute="trailing" id="f7l-o5-9qO"/>
                             <constraint firstItem="wOU-yi-PuS" firstAttribute="top" secondItem="v2g-LL-wRp" secondAttribute="bottom" id="hJq-AX-MDx"/>
                             <constraint firstAttribute="trailing" secondItem="wOU-yi-PuS" secondAttribute="trailing" id="kJS-zc-p4Q"/>
-                            <constraint firstItem="u8U-NK-x4G" firstAttribute="leading" secondItem="uMi-f0-uSz" secondAttribute="leading" id="kqS-FD-SCJ"/>
                             <constraint firstItem="wOU-yi-PuS" firstAttribute="leading" secondItem="uMi-f0-uSz" secondAttribute="leading" id="oXu-KR-c33"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="SvU-fM-jlh"/>
                     <connections>
                         <outlet property="buttonBarView" destination="wOU-yi-PuS" id="Ob7-g0-24e"/>
-                        <outlet property="containerView" destination="u8U-NK-x4G" id="ub0-bW-e3g"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MFf-AB-V7u" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -144,66 +142,94 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="boC-Lq-w9O">
-                                <rect key="frame" x="40" y="130" width="258.5" height="18"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="boC-Lq-w9O">
+                                <rect key="frame" x="40" y="130" width="289.5" height="18"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Packing List Available" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WNB-7b-TdP">
-                                        <rect key="frame" x="0.0" y="0.0" width="139" height="18"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="164" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DH6-QH-svf" customClass="M13Checkbox" customModule="M13Checkbox">
-                                        <rect key="frame" x="149" y="0.0" width="18" height="18"/>
+                                        <rect key="frame" x="174" y="0.0" width="18" height="18"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="18" id="l83-oy-tNc"/>
                                             <constraint firstAttribute="height" constant="18" id="yAu-CQ-O0u"/>
                                         </constraints>
+                                        <connections>
+                                            <action selector="yesPressed:" destination="Q7R-9S-cWW" eventType="valueChanged" id="DFG-Ae-DyN"/>
+                                        </connections>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BpC-oq-szu">
-                                        <rect key="frame" x="177" y="0.0" width="21.5" height="18"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <rect key="frame" x="202" y="0.0" width="27.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Ui-6s-7Tr" customClass="M13Checkbox" customModule="M13Checkbox">
-                                        <rect key="frame" x="208.5" y="0.0" width="18" height="18"/>
+                                        <rect key="frame" x="239.5" y="0.0" width="18" height="18"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="18" id="DeT-o7-Ucy"/>
                                             <constraint firstAttribute="width" constant="18" id="hFg-3a-RCk"/>
                                         </constraints>
+                                        <connections>
+                                            <action selector="noPressed:" destination="Q7R-9S-cWW" eventType="valueChanged" id="ZQ9-Yi-jIr"/>
+                                        </connections>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kgf-0V-LFe">
-                                        <rect key="frame" x="236.5" y="0.0" width="22" height="18"/>
+                                        <rect key="frame" x="267.5" y="0.0" width="22" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="iB0-XE-TuU">
-                                <rect key="frame" x="35" y="195" width="305" height="60"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="iB0-XE-TuU">
+                                <rect key="frame" x="35" y="195" width="692" height="64.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remarks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ACz-gW-6OS">
-                                        <rect key="frame" x="0.0" y="0.0" width="305" height="16"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="692" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ds4-XC-QEm">
-                                        <rect key="frame" x="0.0" y="26" width="305" height="34"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="305" id="MFZ-Yp-4en"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="30.5" width="692" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TBC-17-EzT">
+                                <rect key="frame" x="296" y="324.5" width="170" height="45"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="170" id="4KL-pd-usy"/>
+                                    <constraint firstAttribute="height" constant="45" id="tMA-qc-nT2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                <state key="normal" title="SAVE">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="AddMorePressed:" destination="O7e-yk-mny" eventType="touchUpInside" id="JE0-rl-YsJ"/>
+                                    <action selector="saveBtnPressed:" destination="Q7R-9S-cWW" eventType="touchUpInside" id="geh-n7-SIR"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="TBC-17-EzT" firstAttribute="top" secondItem="ds4-XC-QEm" secondAttribute="bottom" constant="65" id="3Qv-YL-Szf"/>
+                            <constraint firstItem="iB0-XE-TuU" firstAttribute="top" secondItem="boC-Lq-w9O" secondAttribute="bottom" constant="47" id="6kp-Wg-mAo"/>
+                            <constraint firstItem="iB0-XE-TuU" firstAttribute="leading" secondItem="U4j-ze-SCa" secondAttribute="leading" constant="35" id="8c6-4p-8Fj"/>
+                            <constraint firstItem="TBC-17-EzT" firstAttribute="centerX" secondItem="ds4-XC-QEm" secondAttribute="centerX" id="9JD-bB-CD5"/>
+                            <constraint firstItem="boC-Lq-w9O" firstAttribute="top" secondItem="xy6-Y4-eX3" secondAttribute="bottom" constant="130" id="RJA-n4-r5T"/>
+                            <constraint firstItem="boC-Lq-w9O" firstAttribute="leading" secondItem="U4j-ze-SCa" secondAttribute="leading" constant="40" id="S1h-u0-eVJ"/>
+                            <constraint firstItem="ds4-XC-QEm" firstAttribute="width" secondItem="U4j-ze-SCa" secondAttribute="width" multiplier="1:1.11" id="cVC-ib-b94"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="noCheckBox" destination="4Ui-6s-7Tr" id="Os1-px-vwj"/>
@@ -213,7 +239,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kns-nO-SKy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1315" y="1102"/>
+            <point key="canvasLocation" x="1314.84375" y="1101.5625"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="cax-dQ-t1O">
