--- a/Inspection/Base.lproj/Main.storyboard
+++ b/Inspection/Base.lproj/Main.storyboard
@@ -23,8 +23,34 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 3" translatesAutoresizingMaskIntoConstraints="NO" id="MCt-rG-btw">
                                 <rect key="frame" x="230.5" y="38" width="307" height="107.5"/>
                             </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Hvt-jl-gQk">
+                                <rect key="frame" x="158" y="284" width="452" height="142"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Employee Id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fEu-Se-sDV">
+                                        <rect key="frame" x="0.0" y="0.0" width="452" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Choose Language" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5nL-Mb-u2Z" customClass="DropDown" customModule="iOSDropDown">
+                                        <rect key="frame" x="0.0" y="54" width="452" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aSj-eT-mbc">
+                                        <rect key="frame" x="0.0" y="108" width="452" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QC Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S7j-EV-Xf9">
+                                <rect key="frame" x="339" y="200" width="90" height="26.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EZX-lc-ujc">
-                                <rect key="frame" x="119" y="368" width="137" height="30"/>
+                                <rect key="frame" x="316" y="497" width="137" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Login">
@@ -34,39 +60,17 @@
                                     <action selector="onTapLogin:" destination="ega-hU-5wq" eventType="touchUpInside" id="soa-af-KhJ"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Hvt-jl-gQk">
-                                <rect key="frame" x="67.5" y="200" width="137.5" height="142"/>
-                                <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Employee Id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fEu-Se-sDV">
-                                        <rect key="frame" x="0.0" y="0.0" width="137.5" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Choose Language" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5nL-Mb-u2Z" customClass="DropDown" customModule="iOSDropDown">
-                                        <rect key="frame" x="0.0" y="54" width="137.5" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aSj-eT-mbc">
-                                        <rect key="frame" x="0.0" y="108" width="137.5" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                </subviews>
-                            </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="QC Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S7j-EV-Xf9">
-                                <rect key="frame" x="144" y="150" width="86" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="fEu-Se-sDV" firstAttribute="width" secondItem="ky8-et-4Q4" secondAttribute="width" multiplier="1:1.7" id="8w1-Yh-TjP"/>
+                            <constraint firstItem="Hvt-jl-gQk" firstAttribute="centerX" secondItem="ky8-et-4Q4" secondAttribute="centerX" id="KaF-A0-J0c"/>
+                            <constraint firstItem="S7j-EV-Xf9" firstAttribute="centerX" secondItem="MCt-rG-btw" secondAttribute="centerX" id="KvC-j6-CAu"/>
+                            <constraint firstItem="S7j-EV-Xf9" firstAttribute="top" secondItem="MCt-rG-btw" secondAttribute="bottom" constant="54.5" id="WWI-Th-kO5"/>
                             <constraint firstItem="MCt-rG-btw" firstAttribute="centerX" secondItem="ky8-et-4Q4" secondAttribute="centerX" id="XAH-Qi-m2I"/>
                             <constraint firstItem="MCt-rG-btw" firstAttribute="top" secondItem="ky8-et-4Q4" secondAttribute="top" constant="38" id="YLa-TB-34k"/>
                             <constraint firstItem="MCt-rG-btw" firstAttribute="width" secondItem="ky8-et-4Q4" secondAttribute="width" multiplier="0.4" id="ayE-4E-vEk"/>
+                            <constraint firstItem="Hvt-jl-gQk" firstAttribute="top" secondItem="S7j-EV-Xf9" secondAttribute="bottom" constant="57.5" id="l8M-YV-oyz"/>
                             <constraint firstItem="MCt-rG-btw" firstAttribute="height" secondItem="ky8-et-4Q4" secondAttribute="height" multiplier="0.105" id="s2L-vX-QCC"/>
                         </constraints>
                     </view>
